--- a/.gitattributes
+++ b/.gitattributes
@@ -50,3 +50,4 @@
 *.md filter=lfs diff=lfs merge=lfs -text
 *.xml filter=lfs diff=lfs merge=lfs -text
 *.java filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
