--- a/.gitattributes
+++ b/.gitattributes
@@ -52,3 +52,4 @@
 *.java filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
+*.jar filter=lfs diff=lfs merge=lfs -text
