--- a/.gitattributes
+++ b/.gitattributes
@@ -53,3 +53,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.jar filter=lfs diff=lfs merge=lfs -text
+*.js filter=lfs diff=lfs merge=lfs -text
