--- a/.gitattributes
+++ b/.gitattributes
@@ -55,3 +55,4 @@
 *.jar filter=lfs diff=lfs merge=lfs -text
 *.js filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
