sample data files for loading level

--- a/.gitattributes
+++ b/.gitattributes
@@ -56,3 +56,4 @@
 *.js filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+*.properties filter=lfs diff=lfs merge=lfs -text
