--- a/.gitattributes
+++ b/.gitattributes
@@ -57,3 +57,4 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.properties filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
