--- a/.gitattributes
+++ b/.gitattributes
@@ -60,3 +60,4 @@
 *.css filter=lfs diff=lfs merge=lfs -text
 /web/Procfile filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
+*.JPG filter=lfs diff=lfs merge=lfs -text
