--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,4 @@
 /web/Procfile filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
 *.JPG filter=lfs diff=lfs merge=lfs -text
+*.PNG filter=lfs diff=lfs merge=lfs -text
